# Longweekend

./: .gitignore  LongWeekend-web.service.template  README.md  env.template  main.py  pyproject.toml  run-me.sh
app/: __init__.py  commands.py  models.py
app/main/: views.py
app/sql/: monthly_5_cheapest.sql
app/static/css/: _search-popup.scss  app.css  style.css  ui-autocomplete.css
app/templates/: base.html  index.html
common/: kiwi.py
config/: config.py
migrations/versions/: 4b00542297d8_index_t_itinerary2route_route.py
sql/: monthly_5_cheapest.sql
